--- a/results/plots/prediction_single_pend_white_prac.tex
+++ b/results/plots/prediction_single_pend_white_prac.tex
@@ -7,7 +7,7 @@
             x unit = \si{\second},
             y unit = \si{\radian},
             xmin = 0,   xmax = 20,
-            ymin = -0.2,  ymax = 0.1,
+            ymin = -15,  ymax = 25,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -25,30 +25,20 @@
             }
         ]
         
-        % \addplot+[mark = none, style = solid, ultra thick] 
-        % table[x = time, y = theta, col sep = comma] 
-        % {system_id/csv/single_step_predictions_SITL_x_vel_noise_l1_m0-3.csv.csv};
-        % \addlegendentry{Actual}
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = time, y = theta, col sep = comma] 
+        {results/csv/step_predictions_Prac_2021-08-23_01_l-0.5_mp-0.2_wind-0.5.csv_white.csv};
+        \addlegendentry{Actual}
 
-        % % \addplot+[mark = none, style = dashed, ultra thick] 
-        % % table[x = time, y = theta_dmd, col sep = comma] 
-        % % {system_id/csv/single_step_predictions_SITL_x_vel_noise_l1_m0-3.csv.csv};
-        % % \addlegendentry{DMDc}
-
-        % % \addplot+[mark = none, style = dashed, ultra thick] 
-        % % table[x = time, y = theta_havok, col sep = comma] 
-        % % {system_id/csv/single_step_predictions_SITL_x_vel_noise_l1_m0-3.csv.csv};
-        % % \addlegendentry{HAVOK}
-
-        % \addplot+[mark = none, style = dashed, ultra thick] 
-        % table[x = time, y = theta_white, col sep = comma] 
-        % {system_id/csv/single_step_predictions_SITL_x_vel_noise_l1_m0-3.csv.csv};
-        % \addlegendentry{White-box}
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = time, y = theta_hat, col sep = comma] 
+        {results/csv/step_predictions_Prac_2021-08-23_01_l-0.5_mp-0.2_wind-0.5.csv_white.csv};
+        \addlegendentry{Model prediction using the estimated length}
 
         \end{axis}
     \end{tikzpicture} 
     
     \caption{White-box model predictions of a single pendulum for a North velocity step input
-    ($l =$~\SI{1}{\metre}, $m_p =$~\SI{0.3}{\kilo\gram}.)}
+    ($l =$~\SI{0.5}{\metre}, $m_p =$~\SI{0.2}{\kilo\gram}.)}
     \label{fig:prediction_single_pend_white_prac}
 \end{figure}
