--- a/results/plots/prediction_single_pend_white_prac.tex
+++ b/results/plots/prediction_single_pend_white_prac.tex
@@ -38,7 +38,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{White-box model predictions of a single pendulum for a North velocity step input
+    \caption{White-box model prediction for a North velocity step input
     ($l =$~\SI{0.5}{\metre}, $m_p =$~\SI{0.2}{\kilo\gram}.)}
     \label{fig:prediction_single_pend_white_prac}
 \end{figure}
