--- a/results/plots/prediction_double_pend_white_prac.tex
+++ b/results/plots/prediction_double_pend_white_prac.tex
@@ -25,20 +25,20 @@
             }
         ]
         
-        % \addplot+[mark = none, style = solid, ultra thick] 
-        % table[x = time, y = theta, col sep = comma] 
-        % {results/csv/step_predictions_Prac_2021-08-23_01_l-0.5_mp-0.2_wind-0.5.csv_white.csv};
-        % \addlegendentry{Actual}
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = time, y = theta, col sep = comma] 
+        {results/csv/step_predictions_Prac_2021-08-23_04_double_pend_m1_0.2_m2_0.1_l1-0.5_l2_0.62_wind-0.5.csv_white_36.9.csv};
+        \addlegendentry{Actual}
 
-        % \addplot+[mark = none, style = solid, ultra thick] 
-        % table[x = time, y = theta_hat, col sep = comma] 
-        % {results/csv/step_predictions_Prac_2021-08-23_01_l-0.5_mp-0.2_wind-0.5.csv_white.csv};
-        % \addlegendentry{Model prediction using the estimated length}
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = time, y = theta_hat, col sep = comma] 
+        {results/csv/step_predictions_Prac_2021-08-23_04_double_pend_m1_0.2_m2_0.1_l1-0.5_l2_0.62_wind-0.5.csv_white_36.9.csv};
+        \addlegendentry{Model prediction using the estimated length}
 
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{White-box model prediction for a North velocity step input
-    ($l =$~\SI{0.5}{\metre}, $m_p =$~\SI{0.2}{\kilo\gram}.)}
+    \caption{White-box model prediction for a North velocity step input for a dynamic payload
+    ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter}) }
     \label{fig:prediction_double_pend_white_prac}
 \end{figure}
