--- a/results/plots/prediction_double_pend_white_prac.tex
+++ b/results/plots/prediction_double_pend_white_prac.tex
@@ -1,4 +1,4 @@
-\begin{figure}[htb]
+\begin{subfigure}[t]{\columnwidth}
     \centering
     \begin{tikzpicture}
         \begin{axis}[            
@@ -6,8 +6,8 @@
             ylabel = Payload angle,
             x unit = \si{\second},
             y unit = \si{\radian},
-            xmin = 0,   xmax = 20,
-            ymin = -15,  ymax = 25,
+            xmin = 0,   xmax = 19,
+            ymin = -25,  ymax = 25,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -37,8 +37,7 @@
 
         \end{axis}
     \end{tikzpicture} 
-    
-    \caption{White-box model prediction for a North velocity step input for a dynamic payload
-    ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter}) }
+
+    % \caption{Good white-box model approximation}
     \label{fig:prediction_double_pend_white_prac}
-\end{figure}
+\end{subfigure}
