--- a/results/results.tex
+++ b/results/results.tex
@@ -194,9 +194,9 @@
                 \centering  
                 \input{results/plots/FFT_vel_step_double_pend.tex} % subfigure
                 \input{results/plots/FFT_double_pend_prac.tex} % subfigure
-                \caption{Data from a velocity step response with a dynamic payload 
-                ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter}).}
-                \label{fig:FFT_double_pend_prac_subfigs}  
+                \caption{White-box model prediction for a North velocity step input for a dynamic payload
+                ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter}) }
+                \label{fig:predictions_double_pend_prac_subfigs}  
             \end{figure}
 
             \paragraph
@@ -216,7 +216,15 @@
             Figure~\ref{fig:prediction_double_pend_white_prac} plots the measured and predicted payload angle for this flight.
             It is clear that the model prediction is completely different from the actual payload angle.
 
-            \input{results/plots/prediction_double_pend_white_prac.tex}
+            \begin{figure}
+                \captionsetup[subfigure]{justification=centering}
+                \centering  
+                \input{results/plots/prediction_double_pend_white_prac.tex} % subfigure
+                \input{results/plots/prediction_double_pend_white_prac_bad.tex} % subfigure
+                \caption{Data from a velocity step response with a dynamic payload 
+                ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter}).}
+                \label{fig:FFT_double_pend_prac_subfigs}  
+            \end{figure}
 
             \paragraph
             As the size of the payload swing angles decrease due to damping, 
@@ -224,10 +232,7 @@
             Therefore the effect of the superimposed higher frequency oscillations become less prominent and the system dynamics approximate a simple pendulum more closely.
             However, the simple pendulum model is still a bad representation of the practical data.
 
-            \paragraph
-            Figure~\ref{fig:prediction_double_pend_white_prac_bad}
-            
-            \input{results/plots/prediction_double_pend_white_prac_bad.tex}
+            \input{results/plots/prediction_double_pend_white_prac_diff_IC.tex}
             
             \paragraph
             Overall,
