--- a/results/results.tex
+++ b/results/results.tex
@@ -7,20 +7,21 @@
     In previous chapters, it was shown with simulation data that both the white-box and black-box system identification models can
     accurately represent the dynamics of a multirotor with a suspended payload.
     However, practical flights may differ significantly from simulations, which would affect the performance of these techniques.
-    Wind is a common cause of unmeasured disturbances that influences the flight of a multirotor, 
+    Wind is a common unmeasured disturbance that influences the flight dynamics of a multirotor, 
     but this disturbance was not considered in simulations.
     The practical dynamics and sensor noise may also differ from the simulation model, which further motivates the need for practical data.
     
     \paragraph
     In this chapter, the system identification techniques will be applied to practical flight data.
-    The effect of different system configurations and wind conditions on the performance of these techniques will be investigated.
-    These techniques will also be applied and evaluated with a practical dynamic payload.
+    The effect of different wind conditions and payloads on the performance of these techniques will be investigated.
+    These techniques will also be evaluated with a practical dynamic payload.
     % Furthermore, the suitability of the system identification models
     % for swing damping control will be investigated in simulations.
     % The performance of the swing damping controllers will be evaluated for a range of different system configurations.
-    HITL simulations will also be performed to determine whether the proposed hardware can handle the computational complexity of these algorithms.
+    Furthermore, HITL simulations will be performed to determine whether the proposed hardware can handle the computational complexity of these algorithms.
     Finally, the practical feasibility of the proposed system identification and control architectures will be discussed.
-    
+    % ?? Add HITL results to this chapter
+
     \FloatBarrier\section{Methodology}
         
         \paragraph
@@ -92,7 +93,7 @@
 
         \paragraph
         In Section~\ref{sec:param_estimation}, parameter estimation was performed with simulation data.
-        It was shown that the models with the estimated parameter values provide reasonably accurate representations of the simulated dynamics.
+        It was shown that the models which use the estimated parameter values provide reasonably accurate representations of the simulated dynamics.
         In this section, practical flight data will be used for parameter estimation.
         The effect of wind on the parameter estimation techniques will also be investigated.
         
@@ -120,7 +121,7 @@
                 PE = \frac{ l_{estimated} - l_{actual} }{ l_{actual} } \times 100 \% ,
             \end{equation}
             where $l_{actual}$ is the actual cable length and $l_{estimated}$ is the estimated cable length.
-            The \gls{PE} can be interpretted as the percentage of the actual length by which the estimated length differs from the actual length.
+            The \gls{PE} can be interpretted as the percentage of the actual length by which the actual length differs from the estimated length.
             
             \input{results/plots/cable_length_vs_train_time.tex}
 
@@ -134,20 +135,23 @@
             These errors may be due to the large difference between the theoretical and the damped natural frequency.
             It appears that the \gls{PID} controllers damp the payload oscillations significantly, 
             which affects the oscillation frequency of the payload.
-            Hence, an incorrect length is estimated from the frequency peak identified in the \gls{FFT}.
+            Hence, an inaccurate length is estimated from the frequency peak identified in the \gls{FFT}.
+            % The estimation accuracy could be improved by including the effect of damping in the calculation of the cable length from the measured natural frequency.
+            % However, it was shown by \cite{Slabber2020} that this is
             
             \input{results/plots/prediction_single_pend_white_prac.tex}
 
             \paragraph
-            Figure~\ref{fig:prediction_single_pend_white_prac} compares the actual payload angle to the predicted angle of the white-box model for a practical flight. 
-            The cable length estimated from this flight is \SI{0.617}{\metre} resulting in a \gls{PE} of 23.4~\%.
-            It is clear that the prediction differs significantly from the actual data in magnitude and in frequency.
-            A large difference is expected at such large swing angles, because the model was a linearised with the small angle approximation (as discussed in Chapter~\ref{chap:modelling}).
-            Therefore, the actual non-linear dynamics differ significantly from the linearised model for this data.
-            Note that an incorrect damping coefficient used in the model does can not contribute much to the modelling error.
-            The damping coefficient largely effects the rate of attenuation of the amplitude of the oscillations, but does not have a large effect on the initial swing angle of the predicted by the model.
-            The initial swing angle of the practical data is clearly very different from the model prediction.
-            
+            Figure~\ref{fig:prediction_single_pend_white_prac} compares the actual payload angle to the predicted angle of the white-box model for a velocity step in a practical flight. 
+            The cable length estimated from this flight is \SI{2.64}{\metre} resulting in a \gls{PE} of 32.0~\%.
+            The prediction matches the general shape of the practical data well.
+            The transient response of the practical data is noticeably different from the model prediction.
+            This can be seen in the first two oscillation peaks.
+            This is probably due to the dynamcis of the inner loop controllers which are not account for in the white-box model, but affects the transient response of the practical data.
+            Also note that the payload swing angle peaks are attenuated by non-linear damping,
+            but the white-box model prediction shows linear damping.
+            This is a minor modelling error expected from a simplistic linear approximation of a non-linear system. 
+
             \input{results/plots/prediction_single_pend_white_prac_bad.tex}
 
             \paragraph
@@ -232,7 +236,7 @@
             Therefore the effect of the superimposed higher frequency oscillations become less prominent and the system dynamics approximate a simple pendulum more closely.
             However, the simple pendulum model is still a bad representation of the practical data.
 
-            \input{results/plots/prediction_double_pend_white_prac_diff_IC.tex}
+            % \input{results/plots/prediction_double_pend_white_prac_diff_IC.tex}
             
             \paragraph
             Overall,
