--- a/results/results.tex
+++ b/results/results.tex
@@ -190,10 +190,26 @@
 
             \paragraph
             As discussed in Chapter~\ref{chap:system_id}, 
-            the dynamical equations in a white-box model are fixed in the a priori modelling phase.
-            The model is then populated with values from parameter estimation.
-            However, when the dynamics of the observed system differs from the pre-determined model,
+            the dynamical equations of a white-box model are fixed in the a priori modelling phase.
+            The model is then populated with values from parameter estimation techniques.
+            However, when the dynamics of the observed system differ significantly from the pre-determined model,
             the parameter estimation algorithms still determine naive, best-fit values for the pre-determined model.
+
+            \begin{figure}[!htb]
+                \centering
+                \includegraphics[width=0.6\linewidth]{practical_double_pendulum_2.jpg}
+                \caption{Practical flight with an suspended elongated payload attached to Honeybee}
+                \label{fig:practical_double_pendulum}
+            \end{figure}     
+
+            \paragraph
+            One of the a priori modelling assumptions mentioned in Section~\ref{sec:param_estimation},
+            is that the suspended payload is a point mass.
+            This reduced the considered suspended payload system to a simple pendulum in the white-box model.
+            Figure~\ref{fig:practical_double_pendulum} shows a photo of an elongated payload suspended from Honeybee during a practical flight
+            This is a practical example of a dynamic payload which deviates significantly from the point mass assumption.
+            The mass distribution causes a relative rotation of the payload with respect to the suspended cable,
+            which significantly affects the flight dynamics.
             
             \begin{figure}
                 \captionsetup[subfigure]{justification=centering}
@@ -454,24 +470,6 @@
             However, the data-driven methods can handle this deviation
             because it does not rely on these assumptions.
                         
-            \begin{figure}[!htb]
-                \centering
-                \includegraphics[width=0.6\linewidth]{practical_double_pendulum_2.jpg}
-                \caption{Practical flight with an suspended elongated payload attached to Honeybee}
-                \label{fig:practical_double_pendulum}
-            \end{figure}     
-
-            \paragraph
-            One of the a prioir modelling assumptions mentioned in Section~\ref{sec:param_estimation},
-            is that the suspended payload is a point mass.
-            This reduced the considered suspended payload system to a simple pendulum in the white-box model.
-            Figure~\ref{fig:practical_double_pendulum} shows a photo of an elongated payload 
-            suspended from Honeybee during a practical flight
-            This is a practical example of a dynamic payload 
-            which deviates significantly from the point mass assumption.
-            The mass distribution causes a relative rotation of the payload with respect to the suspended cable,
-            which significantly affects the flight dynamics.
-
             \input{results/plots/prac_pediction_double_pend_theta_black.tex}
 
             \paragraph
