--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -55,7 +55,7 @@
         % \paragraph
         % For each of these payload cases, a different parameter estimation based techniques would needs to be designed for effective control.
         % This is undesirable for practical drone deliveries, especially when the type of paylaod is not known well in advance or changes regularly.
-        % A data-driven technique provides a more general solution since it accommodates a larger range of payload types and does not require a prioir modelling information.
+        % A data-driven technique provides a more general solution since it accommodates a larger range of payload types and does not require a priori modelling information.
             
         % \paragraph
         % Since the a priori white-box model is based on a single pendulum model, 
